# diffurch-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  diffurch.hpp  equation.hpp  events.hpp  polynomial.hpp  rk_method.hpp  rk_tables.hpp  solver.hpp  state.hpp  state_lambda.hpp  state_symbols.hpp  stepsize_controller.hpp  vec.hpp
docs/: events.md  index.md  plotting.md  state.md  symbolic.md
docs/api/: rk_tables.md  state.md  stepsize_controller.md  symbolic.md
examples/: harmonic_oscillator.cpp  linear_ndde.cpp  lorenz.cpp  lorenz_map.cpp  ndde_bomb.cpp  oscillator_eq.cpp  relay1.cpp  relay2.cpp  relay_dde_2.cpp
rk_tables/: rk98.hpp  rktp64.hpp
rk_tables/wolfram_mathematica/: rktp64.m
src/: equations.hpp  events.hpp  rk_tables.hpp  solver.hpp  state.hpp  stepsize.hpp  symbolic.hpp
src/equations/: harmonic_oscillator.hpp  linear1.hpp  linear_dde.hpp  log_oscillator.hpp  lorenz.hpp  relay.hpp  relay_dde.hpp
src/equations/ode/: linear.hpp
src/events/: discussion.txt  event.hpp  events.hpp  handlers.hpp  primitives.hpp
src/rk_tables/: dp54.hpp  rk4.hpp  rk98.hpp  rktp64.hpp
src/rk_tables/wolfram_mathematica/: dp54.m  rk4.m  rk98.m
src/symbolic/: delta_function.hpp  detect_symbols.hpp  discontinuous.hpp  discussion.txt  event_detection.hpp  event_set_handler.hpp  expression.hpp  math.hpp  operators.hpp  piecewise.hpp  set_symbols.hpp  symbol_types.hpp  variable_presets.hpp  variables.hpp  variables_presets.hpp  vector.hpp
src/test/: global_error.hpp
src/util/: find_root.hpp  math.hpp  polynomial.hpp  postprocessing.hpp  print.hpp  type_traits.hpp  vec.hpp
test/: adaptive_stepsize.cpp  discontinuous.cpp  event_detection.cpp  events.cpp  global_error.cpp  ndde_plot.cpp  oscillator_eq.cpp  piecewise.cpp  rlvalues.cpp  state_symbols.cpp  type_erasure.cpp
test/api/: events.cpp  hist.cpp  math.cpp  symbols.cpp
test/educational/: constness.cpp  describe.cpp
tests/: Makefile  oscillator_eq.cpp  rk.cpp  state_symbols.cpp
